Responsive button fixes on the order now

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="author" content="Bootstrap Temple">
 
     <!-- Page Title -->
-    <title>Italiano Restaurant - Bootstrap Template from the Bootstrap Temple</title>
+    <title>Summerof69 Cafe</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="img/favicon.ico">
 
@@ -72,7 +72,9 @@
                                 <a href="#contact">Contact Us</a>
                             </li>
                         </ul>
-                        <a href="#" class="btn navbar-btn btn-unique hidden-sm hidden-xs" id="sopen-reservation">Order Online</a>
+                        <a href="#" class="btn navbar-btn btn-unique hidden-sm " id="sopen-reservation">Order Online</a>
+
+
                     </div>
                 </div>
                 <div class="sub-header">
