Changed slider images and the main logo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="author" content="Bootstrap Temple">
 
     <!-- Page Title -->
-    <title>Summerof69 Cafe</title>
+    <title>Summer of 69 Cafe</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="img/favicon.ico">
 
@@ -102,7 +102,7 @@
                     <!-- slide -->
                     <div class="sl-slide bg-1" data-orientation="horizontal" data-slice1-rotation="-25" data-slice2-rotation="-25" data-slice1-scale="2"
                         data-slice2-scale="2">
-                        <div class="sl-slide-inner" style="background-image: url(img/hero-bg.jpg);">
+                        <div class="sl-slide-inner" style="background-image: url(img/Coffee-Photo-1.jpg);">
                             <div class="container">
                                 <h2>Welcome to
                                     <span class="text-primary">Summer of 99 Café </span>!
@@ -115,7 +115,7 @@
                     <!-- slide -->
                     <div class="sl-slide bg-2" data-orientation="vertical" data-slice1-rotation="10" data-slice2-rotation="-15" data-slice1-scale="1.5"
                         data-slice2-scale="1.5">
-                        <div class="sl-slide-inner" style="background-image: url(img/hero-bg02.jpg);">
+                        <div class="sl-slide-inner" style="background-image: url(img/deli1-min.jpg);">
                             <div class="container">
                                     <h2>Are you
                                             <span class="text-primary">hungry enough?
@@ -128,7 +128,7 @@
                     <!-- slide -->
                     <div class="sl-slide bg-3" data-orientation="horizontal" data-slice1-rotation="3" data-slice2-rotation="3" data-slice1-scale="2"
                         data-slice2-scale="1">
-                        <div class="sl-slide-inner" style="background-image: url(img/hero-bg03.jpg);">
+                        <div class="sl-slide-inner" style="background-image: url(img/summerof99pastries.jpg);">
                             <div class="container">
                                 <h2>Tired of <span class="text-primary">pastries of big coffee chains?</span>
                                     </h2>
