Google map responsive fixed

--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@
                             </div>
                            
                         </div>
-            <div id="map" ><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2803.0065685549716!2d-75.7769029!3d45.3688625!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce01334a700001%3A0xfaede452d843dc0f!2sSummer+of+99+Cafe!5e0!3m2!1sne!2snp!4v1522588814004" width="1304" height="700" frameborder="0" style="border:0" allowfullscreen></iframe></div>
+            <div id="map" ><iframe width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2803.0065685549716!2d-75.7769029!3d45.3688625!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce01334a700001%3A0xfaede452d843dc0f!2sSummer+of+99+Cafe!5e0!3m2!1sne!2snp!4v1522588814004" width="1304" height="700" frameborder="0" style="border:0" allowfullscreen></iframe></div>
             
 
 
