--- a/index.html
+++ b/index.html
@@ -186,32 +186,7 @@
 
 
 
-        <!-- Details -->
-        <section id="details" class="details">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <div class="heading text-center">
-                            <p>Call Us Now For</p>
-                            <h5>Home Delivery</h5>
-                        </div>
-                        <a href="tel:+16134221472" class="phone">+1 613 422 1472</a>
-                    </div>
-
-                    <div class="col-sm-6">
-                        <div class="heading text-center">
-                            <p>Check Our Clients'</p>
-                            <h5>Rating &amp; Reviews</h5>
-                        </div>
-                        <a href="#" class="reviews btn-unique">
-                            <i class="fa fa-angle-right"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- End Details-->
-
+       
 
         <!-- About Section -->
         <section id="about" class="about">
@@ -818,7 +793,7 @@
             </div>
         </section>
         <!-- End Menu Section -->
-
+<section id="contact">
                         <div class="form-holder row">
                             <div class="text-center col-md-8 col-md-offset-2">
                                     <header>
@@ -855,7 +830,7 @@
                         </div>
             <div id="map" ><iframe width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2803.0065685549716!2d-75.7769029!3d45.3688625!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce01334a700001%3A0xfaede452d843dc0f!2sSummer+of+99+Cafe!5e0!3m2!1sne!2snp!4v1522588814004" width="1304" height="700" frameborder="0" style="border:0" allowfullscreen></iframe></div>
             
-
+</section>
 
 
         <!-- Footer -->
@@ -963,57 +938,6 @@
         <!-- end scroll top btn -->
 
 
-        <!-- moadal booking form -->
-        <div class="reservation-overlay hidden-sm hidden-xs">
-            <section id="reservation-modal" class="reservation-modal">
-                <div id="close">
-                    <i class="icon-close"></i>
-                </div>
-
-                <div class="container">
-                    <div class="row">
-                        <div class="form-holder col-md-12 text-center">
-                            <h2>Make a reservation</h2>
-                            <h3>Book your table now</h3>
-
-                            <form id="booking-form-alternative" method="get" action="#">
-                                <div class="row">
-                                    <div class="col-md-push-1 col-sm-10">
-                                        <div class="row">
-                                            <label for="cname" class="col-sm-6 unique">Name
-                                                <input name="clientname" type="text" id="cname" required>
-                                            </label>
-                                            <label for="cemail" class="col-sm-6 unique">Email
-                                                <input name="clientemail" type="email" id="cemail" required>
-                                            </label>
-                                            <label for="cnumber" class="col-sm-6 unique">Number
-                                                <input name="clientnumber" type="text" id="cnumber" required>
-                                            </label>
-                                            <label for="cpeople" class="col-sm-6 unique">How Many People
-                                                <input name="clientpeople" type="number" id="cpeople" min="1" required>
-                                            </label>
-                                            <label for="cdate" class="col-sm-6 unique">Date
-                                                <input name="clientdate" type="text" id="cdate" class="datepicker-here" data-language='en' required>
-                                            </label>
-                                            <label for="time-alt" class="col-sm-6 unique">Time
-                                                <input name="clienttime" type="text" id="time-alt" class="timepicker" required>
-                                            </label>
-                                            <label for="request-alt" class="col-sm-12 unique">Special Request
-                                                <textarea id="request-alt" name="clientrequest" required></textarea>
-                                            </label>
-                                            <div class="col-sm-12">
-                                                <button type="submit" class="btn-unique">Book Now</button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </div>
-        <!-- end modal booking form -->
     </div>
 
 
