Added buttons in sliders

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                                 </h2>
                                 <p>House of well-brewed coffee, fresh pastries and everyday made panini!
                                    </p>
+                                   <a href="#" class="btn navbar-btn btn-unique hidden-sm" style="margin-top: 3px;" id="sopen-reservation">Order Online</a>
                             </div>
                         </div>
                     </div>
@@ -122,6 +123,7 @@
                                                 </span>
                                         </h2>
                                         <p>Then check out our delicious Deli Sandwiches!</p>
+                                        <a href="#" class="btn navbar-btn btn-unique hidden-sm" style="margin-top: 3px;" id="sopen-reservation">Order Online</a>
                             </div>
                         </div>
                     </div>
@@ -135,6 +137,7 @@
                                     <p>Come and try our same day baked fresh pastries!
 
                                         </p>
+                                        <a href="#" class="btn navbar-btn btn-unique hidden-sm" style="margin-top: 3px;" id="sopen-reservation">Order Online</a>
                             </div>
                         </div>
                     </div>
