Changed footer colours

--- a/index.html
+++ b/index.html
@@ -855,13 +855,13 @@
                         </div>
                         <ul class="contact list-unstyled">
                             <li>
-                                <span class="icon-map text-primary"></span> 2255 CARLING AVE., UNIT 104, OTTAWA</li>
+                                <i class="icon-map"> 2255 CARLING AVE., UNIT 104, OTTAWA</i> </li>
                             <li>
                                 <a href="mailto:contact@summerof99cafe.com">
-                                    <span class="icon-mail text-primary"></span>contact@summerof99cafe.com</a>
+                                    <i class="icon-mail"> contact@summerof99cafe.com</i></a>
                             </li>
                             <li>
-                                <span class="icon-phone text-primary"></span>+1 613-422-1472</li>
+                                <i class="icon-phone"> +1 613-422-1472</i></li>
                         </ul>
                     </div>
 
